End Of Section 2

--- a/INDWlaks/INDWlaks.com/appsettings.json
+++ b/INDWlaks/INDWlaks.com/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "INDWalks": "server=VIT-N-052\\MSSQLSERVER2019;database=INDWalksDb;Trusted_Connection=true"
+  }
 }
